assets/stylesheets/screen.css
* {
  box-sizing: border-box; }

html {
  background: url("/assets/images/background.png"), linear-gradient(90deg, #CCCCCC 0%, #FFFFFF 50%, #CCCCCC 100%);
  font-family: Junction, Arial, Helvetica, 'Helvetica Neue', sans-serif; }


body > header {
  background: url("/assets/images/background.png"), linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(221, 221, 221, 0.6) 15%, rgba(248, 248, 248, 0.6) 90%, rgba(201, 201, 201, 0.6) 92%, #000000 100%);
  box-shadow: 2px 0 5px #000;
  height: 64px;
  min-width: 840px;
  padding: 0;
  position: relative; }
  body > header h1 {
    margin: 0;
    padding: 10px; }
    body > header h1 img {
      font-weight: normal;
      height: 42px; }
  body > header nav {
    cursor: pointer; }
    body > header nav.social {
      font-size: 0.85em;
      font-weight: 200;
      position: absolute;
      right: 5px;
      top: 5px; }
      body > header nav.social a {
        margin-left: 1em; }
        body > header nav.social a:hover, body > header nav.social a:focus {
          color: #DD2121; }
        body > header nav.social a span.icon {
          margin-right: 5px; }
      body > header nav.site {
        bottom: 5px;
        font-size: 14px;
        font-weight: bold;
        padding: 7px 0 7px 7px;
        position: absolute;
        right: 0;
        text-align: right;
        text-transform: uppercase;
        width: auto; }
        body > header nav.site a {
          border-bottom: 3px solid #000000;
          padding: 4px 0.5em 0;
          transition: all 300ms linear; }
          body > header nav.site a:hover, body > header nav.site a:focus {
            border-color: #DD2121;
            color: #DD2121;
            padding: 4px 2em 0; }
            body > header nav.site a:hover:first-child, body > header nav.site a:focus:first-child {
              padding-left: 0.5em; }
            body > header nav.site a:hover:last-child, body > header nav.site a:focus:last-child {
              padding-right: 0.5em; }
          body > header nav.site a[data-current] {
            background: none repeat scroll 0 0 #000000;
            border-color: #000000;
            color: #FFFFFF; }
            body > header nav.site a[data-current]:hover, body > header nav.site a[data-current]:focus {
              border-color: #000000;
              color: #FFFFFF; }


section.banner {
  background: url("/assets/images/banner_background.png"), #303D4D;
  box-shadow: 2px 0 5px #000000 inset;
  font-size: 48px;
  height: 180px;
  padding: 32px 0; }
  section.banner div.wrapper {
    margin: auto;
    text-align: center;
    width: 840px; }
  section.banner figure {
    color: rgba(255, 255, 255, 0.5);
    float: left;
    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
    line-height: 1.2em;
    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
    width: 670px; }
  section.banner .side {
    margin-left: 670px;
    padding-top: 25px;
    width: 145px; }
  section.banner a.button {
    background: linear-gradient(135deg, #31BE19 0%, #1C5B0B 100%), #258811;
    border: 1px solid #000000;
    border-radius: 5px 5px 5px 5px;
    box-shadow: 0 1px 0 0 #3DD34A inset;
    color: rgba(255, 255, 255, 0.8);
    display: block;
    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
    font-weight: 200;
    margin-right: 8px;
    padding: 7px 18px;
    text-shadow: 2px 2px 0 #000000;
    transition: all 500ms ease 0s; }
    section.banner a.button:hover, section.banner a.button:focus {
      border-radius: 10px 10px 10px 10px;
      box-shadow: 1px 1px 0 0 #000000 inset;
      margin-left: -8px;
      margin-right: 0;
      margin-top: -8px;
      padding: 15px 26px;
      text-shadow: 2px 2px 3px #000000; }


.container {
  margin: 0 auto 50px;
  width: 840px; }

section.column {
  display: inline-block;
  margin: 0 5px;
  vertical-align: top;
  width: 250px; }
  section.column h1 {
    color: #666;
    font-size: 1.5em;
    font-variant: small-caps; }
  section.column:hover h1 a, section.column:focus h1 a {
    color: #303D4D; }
  section.column ul {
    padding: 0; }
  section.column li {
    color: grey;
    display: block;
    font-size: 0.8rem;
    margin: 10px 0; }
  section.column time {
    float: left;
    text-align: right;
    width: 85px;
    white-space: nowrap; }
  section.column span.text {
    display: inline }
    section.column span.text:before {
      content: ':';
      margin: 0 5px; }
    section.column span.text a {
      color: #303D4D; }
      section.column span.text a:hover, section.column span.text a:focus {
        color: #666; }


section.feed {}
  section.feed.column {
    width: 300px; }
  section.feed.columns {
    column-width: 300px; }
  section.feed ul {}
    section.feed ul.loading {
      height: 300px;
      background: url(/assets/images/loader.gif) no-repeat 50% 50%; }
  section.feed li {}
    section.feed li.create {
      color: #258811; }
    section.feed li.delete {
      color: #DD2121; }
    section.feed li.special {
      color: #881; }
  section.feed span.text {
    display: block;
    max-width: 300px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap; }

section.column.feed > a {
  color: grey;
  display: block;
  font-size: 0.75rem;
  text-align: center;
  text-transform: lowercase; }
  section.column.feed > a:hover, section.column.feed > a:focus {
    color: #303D4D; }
  section.column.feed > a:before, section.column.feed > a:after {
    content: '—';
    margin: 0 5px; }

.irc {
  background: #E3F8FA;
  border-top: 3px solid gray;
  bottom: 0;
  position: fixed;
  width: 100%; }
  .irc iframe {
    border: 0;
    bottom: -5px;
    display: none;
    height: 250px;
    position: relative; }
  .irc .close {
    display: none; }
  .irc a {
    border-bottom: 1px solid;
    float: right;
    font-size: 12px;
    margin: 3px 7px; }
  .irc h1 {
    border-bottom: 1px solid gray;
    font-size: 14px;
    margin: 0;
    padding: 2px; }

@font-face {
  font-family: "Sociceon";
  font-style: normal;
  font-weight: normal;
  src:  url("/assets/fonts/sociceon.eot");
  src:  url("/assets/fonts/sociceon.eot?#iefix") format("embedded-opentype"),
        url("/assets/fonts/sociceon.woff") format("woff"),
        url("/assets/fonts/sociceon.ttf") format("truetype"),
        url("/assets/fonts/sociceon.svg#socicon") format("svg"); }

.icon {
  font-family: "Sociceon"; }

a, a:active, a:visited {
  color: inherit;
  cursor: pointer;
  text-decoration: none;
  transition: color 300ms; }

/*/unindented.org/articles/2009/10/github-ribbon-using-css-transforms/*/
.ribbon {
  background: #303D4D;
  overflow: hidden;
  position: fixed;
  right: -3.5em;
  bottom: 4em;
  transform: rotate(-45deg);
  box-shadow: 0 0 1em #888; }
  .noirc .ribbon {
    bottom: 2.5em; }
  .ribbon a {
    border: 1px solid white;
    color: #fff;
    display: block;
    font: bold 81.25% "Helvetiva Neue", Helvetica, Arial, sans-serif;
    margin: 0.05em 0 0.075em 0;
    padding: 0.5em 3.5em;
    text-align: center;
    text-decoration: none;
    text-shadow: 0 0 0.5em #444; }

.clearfix {}
  .clearfix:before, .clearfix:after {
    content: "";
    display: table; }
  .clearfix:after {
    clear: both; }

/*
 * R: #DD2121;
 * G: #258811;
 * B: #303D4D;
 */

